; ModuleID = '/home/carl/AnghaBench/qmk_firmware/tmk_core/protocol/arm_atsam/usb/extr_usb2422.c_USB_ExtraSetState.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/tmk_core/protocol/arm_atsam/usb/extr_usb2422.c_USB_ExtraSetState.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32, i64, i64 }

@USB_EXTRA_STATE_DISABLED_UNTIL_REPLUG = common dso_local global i64 0, align 8
@USB_EXTRA_STATE_DISABLED = common dso_local global i64 0, align 8
@usb_host_port = common dso_local global i64 0, align 8
@USB_HOST_PORT_1 = common dso_local global i64 0, align 8
@sr_exp_data = common dso_local global %struct.TYPE_4__ zeroinitializer, align 8
@USB_HOST_PORT_2 = common dso_local global i64 0, align 8
@usb_extra_state = common dso_local global i64 0, align 8
@USB_EXTRA_STATE_ENABLED = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [21 x i8] c"USB: Extra enabled\0D\0A\00", align 1
@.str.1 = private unnamed_addr constant [22 x i8] c"USB: Extra disabled\0D\0A\00", align 1
@.str.2 = private unnamed_addr constant [35 x i8] c"USB: Extra disabled until replug\0D\0A\00", align 1
@.str.3 = private unnamed_addr constant [27 x i8] c"USB: Extra state unknown\0D\0A\00", align 1
@gcr_breathe = common dso_local global i32 0, align 4
@gcr_desired = common dso_local global i32 0, align 4
@led_animation_breathing = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @USB_ExtraSetState(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %4 = load i64, i64* %2, align 8
  store i64 %4, i64* %3, align 8
  %5 = load i64, i64* %2, align 8
  %6 = load i64, i64* @USB_EXTRA_STATE_DISABLED_UNTIL_REPLUG, align 8
  %7 = icmp eq i64 %5, %6
  br i1 %7, label %8, label %10

8:                                                ; preds = %1
  %9 = load i64, i64* @USB_EXTRA_STATE_DISABLED, align 8
  store i64 %9, i64* %2, align 8
  br label %10

10:                                               ; preds = %8, %1
  %11 = load i64, i64* @usb_host_port, align 8
  %12 = load i64, i64* @USB_HOST_PORT_1, align 8
  %13 = icmp eq i64 %11, %12
  br i1 %13, label %14, label %16

14:                                               ; preds = %10
  %15 = load i64, i64* %2, align 8
  store i64 %15, i64* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @sr_exp_data, i32 0, i32 0, i32 2), align 8
  br label %24

16:                                               ; preds = %10
  %17 = load i64, i64* @usb_host_port, align 8
  %18 = load i64, i64* @USB_HOST_PORT_2, align 8
  %19 = icmp eq i64 %17, %18
  br i1 %19, label %20, label %22

20:                                               ; preds = %16
  %21 = load i64, i64* %2, align 8
  store i64 %21, i64* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @sr_exp_data, i32 0, i32 0, i32 1), align 8
  br label %23

22:                                               ; preds = %16
  br label %52

23:                                               ; preds = %20
  br label %24

24:                                               ; preds = %23, %14
  %25 = load i64, i64* %2, align 8
  %26 = icmp ne i64 %25, 0
  %27 = xor i1 %26, true
  %28 = zext i1 %27 to i32
  store i32 %28, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @sr_exp_data, i32 0, i32 0, i32 0), align 8
  %29 = call i32 (...) @SR_EXP_WriteData()
  %30 = load i64, i64* %3, align 8
  store i64 %30, i64* @usb_extra_state, align 8
  %31 = load i64, i64* @usb_extra_state, align 8
  %32 = load i64, i64* @USB_EXTRA_STATE_ENABLED, align 8
  %33 = icmp eq i64 %31, %32
  br i1 %33, label %34, label %36

34:                                               ; preds = %24
  %35 = call i32 @CDC_print(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str, i64 0, i64 0))
  br label %52

36:                                               ; preds = %24
  %37 = load i64, i64* @usb_extra_state, align 8
  %38 = load i64, i64* @USB_EXTRA_STATE_DISABLED, align 8
  %39 = icmp eq i64 %37, %38
  br i1 %39, label %40, label %42

40:                                               ; preds = %36
  %41 = call i32 @CDC_print(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.1, i64 0, i64 0))
  br label %51

42:                                               ; preds = %36
  %43 = load i64, i64* @usb_extra_state, align 8
  %44 = load i64, i64* @USB_EXTRA_STATE_DISABLED_UNTIL_REPLUG, align 8
  %45 = icmp eq i64 %43, %44
  br i1 %45, label %46, label %48

46:                                               ; preds = %42
  %47 = call i32 @CDC_print(i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str.2, i64 0, i64 0))
  br label %50

48:                                               ; preds = %42
  %49 = call i32 @CDC_print(i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.3, i64 0, i64 0))
  br label %50

50:                                               ; preds = %48, %46
  br label %51

51:                                               ; preds = %50, %40
  br label %52

52:                                               ; preds = %22, %51, %34
  ret void
}

declare dso_local i32 @SR_EXP_WriteData(...) #1

declare dso_local i32 @CDC_print(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
